app/_components/sections/common/CtaButton.module.css
.ctaBtn {
  display: inline-block;
  padding: 12px 32px;
  background-color: #00a0e9;
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  border-radius: 999px;
  box-shadow: 0 4px 0 #0078ac;
  margin-top: 24px;
  margin-left: 12px;
}

.lineAddText {
  display: block;
  font-size: 14px;
  line-height: 1.4;
  margin-top: 24px;
}

.lineSubText {
  display: block;
  font-size: 14px;
  line-height: 1.4;
  margin-top: -2px;
}

.lineAddText :global(.fa-line) {
  color: #08b949;
}

.centerBtn {
  text-align: center;
  margin-bottom: 32px;
}

@media (max-width: 576px) {
  .centerBtn {
    margin-bottom: 24px;
  }

  .lineAddText {
    margin-bottom: 32px;
    text-align: center;
  }

  .ctaBtn {
    margin: 28px 16px 8px 16px;
  }
}

